0.8.9 (2016-01-11)
==================

Bug fixes
---------

- Fix a bug where annotation deletions were not correctly processed by the
  "real-time" streamer (7daa709)

Features
--------

- Add a tutorial for new users to the sidebar (feature flagged:
  sidebar_tutorial). (#2824)

0.8.8 (2016-01-11)
==================

Bug fixes
---------

- Fix a bug where embedded videos were not always shown (#2828, #2807).

- Fix numerous usability issues and a potential denial-of-service attack
  associated with password resets (#2803).

- Fix a bug which prevented Hypothesis from being correctly re-activated on a
  Chrome tab after it navigated (#2838).

Features
--------

- Embedded videos can now be shown fullscreen (#2814, #2816).

- PDF documents can now be detected regardless of file extension (#2834).

Miscellanea
-----------

- We now clear any "selection" of annotations when a new annotation is created,
  so the editor is always visible (#2817).

- Various improvements to the appearance of truncated annotations (feature
  flagged: truncate_annotations) (#2802).

0.8.7 (2015-12-18)
==================

Bug fixes
---------

- Links containing underscores within annotations are no longer mangled (#2801).

- Fix a crash when invalid data is sent to the login endpoint (#2793).

Features
--------

- New homepage design (feature flagged: new_homepage) (#2770).

- Change YouTube and Vimeo links into video embeds
  (feature flagged: embed_media) (#2805).

0.8.6 (2015-12-11)
==================

Bug fixes
---------

- Fix broken standalone annotation pages for replies (#2786).

- Fix a bug where realtime updates weren't delivered to standalone annotation
  pages for replies if the thread root on that page was also a reply (#2787).

- A number of other small fixes and clean-ups.

0.8.5 (2015-12-08)
==================

Bug fixes
---------

- Fix a blocker bug preventing annotations from being created (3d014fc).

0.8.4 (2015-12-08)
==================

Bug fixes
---------
